finished v1.0 at home

--- a/style/main.css
+++ b/style/main.css
@@ -153,7 +153,8 @@ a:after {
 
 /* Header Wrap */
 #headerwrap {
-	background: url(../img/header-bg.jpg) no-repeat center top;
+	position:relative;
+	background:rgba(0,0,0,0.3);
 	margin-top: 60px;
 	padding-top:140px;
 	text-align:center;
@@ -182,7 +183,15 @@ a:after {
 	font-size: 20px;
 	color: white;
 }
+/*pri_img*/
+.pri_img {
+	position:absolute;top:20px;right:0;bottom:20px;left:100px;background:url(../img/my.jpg) no-repeat center left;
 
+    -webkit-background-size: contain;
+    -moz-background-size:contain;
+    -o-background-size: contain;
+    background-size: contain;
+}
 /* Intnro Wrap */
 
 #intro {
