--- a/style/main.css
+++ b/style/main.css
@@ -7,6 +7,7 @@
  */
 
 body {
+
   background-color: #f2f2f2;
     font-family: "Lato","Microsoft Yahei",sans-serif;
     font-weight: 300;
@@ -162,6 +163,7 @@ a:after {
 	background-position: center center;
 	min-height: 500px;
 	width: 100%;
+	z-index:99;
 	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
@@ -185,8 +187,8 @@ a:after {
 }
 /*pri_img*/
 .pri_img {
-	position:absolute;top:20px;right:0;bottom:20px;left:100px;background:url(../img/my.jpg) no-repeat center left;
-
+	position:absolute;top:60px;left:100px;width:300px;height:500px;background:url(../img/my.jpg) no-repeat center left;
+z-index:1;
     -webkit-background-size: contain;
     -moz-background-size:contain;
     -o-background-size: contain;
