--- a/style/main.css
+++ b/style/main.css
@@ -187,7 +187,7 @@ a:after {
 }
 /*pri_img*/
 .pri_img {
-	position:absolute;top:60px;left:100px;width:300px;height:500px;background:url(../img/my.jpg) no-repeat center left;
+	position:absolute;top:120px;left:10%;width:200px;height:350px;background:url(../img/my.jpg) no-repeat center left;
 z-index:1;
     -webkit-background-size: contain;
     -moz-background-size:contain;
